--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,10 +1,5 @@
 <div class="row">
     <div *ngFor="let post of posts">
-        <div class="card m-3" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">{{post.title}}</h5>
-                <p class="card-text text-secondary">{{post.content}}</p>
-            </div>
-        </div>
+        <app-post [post]="post"></app-post>
     </div>
 </div>
