--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
         <li class="nav-item">
             <a class="nav-link" id="posts-tab" routerLinkActive="active" [routerLink]="['/posts']" role="tab">Post</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" id="posts-tab" routerLinkActive="active" [routerLink]="['/edit']" role="tab">Edit</a>
+        </li>
     </ul>
 </nav>
 <!-- <div class="tab-content" id="myTabContent">
