--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,9 +1,5 @@
 <div><br><br> Title:
-    <input type="text" class="rounded" [(ngModel)]="post.title"> <br><br> Content:<br><br>
+    <input id="titleInput" type="text" class="rounded" [(ngModel)]="post.title"> <br><br> Content:<br><br>
     <textarea class="rounded" rows="10" cols="40" [(ngModel)]="post.content"></textarea><br><br>
     <button type="button" class="btn btn-primary" (click)="onBtnClck()">Post</button>
-</div><br>
-
-<div *ngIf="dataAdded">
-    Posted!
 </div>
