--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,6 +1,7 @@
 <div class="card m-3" style="width: 18rem;">
     <div class="card-body">
-        <i class="fa fa-times float-right" (click)="this.postService.deletePost(post.id);updatecard();"></i>
+        <i class="fa fa-times float-right" (click)="onDltBtn(post.id)"></i>
+        <i class="fa fa-edit float-right" (click)="editData(post.id,post.title,post.content)"></i>
         <h5 class="card-title">{{post.title}}</h5>
         <p class="card-text text-secondary">{{post.content}}</p>
         <p class="card-text text-secondary">{{post.id}}</p>
